--- a/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
+++ b/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 0rem 1rem;
 }
-h2, p{
+.Header__h1, .Paragraph__p{
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -42,7 +42,7 @@ h2, p{
     }
     .ReverseContainer{
         flex-direction: row-reverse;
-        margin-left: -10rem;
+        margin-left: -5rem;
     }
     .TextDiv{
         margin-right: 0rem;
