--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,18 @@
 html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  width: 100%;
+  color: #161637
+}
+
+.DesktopOnly {
+  display: none;
+}
+
+:global(.App) {
+  min-width: 100%;
 }
 
 h2, p {
@@ -17,6 +28,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
 .carousel {
   position: relative;
   margin: 0 auto;
@@ -27,20 +39,20 @@ a {
   min-height: 21rem;
 }
 
-.carousel__track-container{
+.carousel__track-container {
   height: 100%;
   position: relative;
   overflow: hidden;
 }
 
-.carousel__track{
-  padding:0;
+.carousel__track {
+  padding: 0;
   margin: 0;
   list-style: none;
   transition: transform 400ms ease-in-out;
 }
 
-.carousel__slide{
+.carousel__slide {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -50,7 +62,7 @@ a {
   padding: 4rem 1rem;
 }
 
-.carousel__slide h2{
+.carousel__slide h2 {
   font-size: 1rem;
   margin: 0 1rem;
   font-style: italic;
@@ -70,28 +82,31 @@ a {
   border: 1px solid black;
 }
 
-.carousel__button:focus{
+.carousel__button:focus {
   outline: black;
 }
 
-.carousel__button--left{
+.carousel__button--left {
   left: -60px
 }
-.carousel__button--left img{
-  padding-right:4px ;
-}
-.carousel__button--right{
-  right: -60px
-}
-.carousel__button--right img{
-  padding-left:4px ;
+
+.carousel__button--left img {
+  padding-right: 4px;
 }
 
-.carousel__button img{
+.carousel__button--right {
+  right: -60px
+}
+
+.carousel__button--right img {
+  padding-left: 4px;
+}
+
+.carousel__button img {
   width: 20px;
 }
 
-.carousel__nav{
+.carousel__nav {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,17 +119,17 @@ a {
   cursor: pointer;
   width: 3rem;
   height: 2px;
-  background: rgba(0,0,0, .3);
+  background: rgba(0, 0, 0, .3);
 }
 
 .carousel__indicator:focus {
   outline: black;
 }
 
-.carousel__indicator.current-slide{
-  background: rgba(0,0,0, .8);
+.carousel__indicator.current-slide {
+  background: rgba(0, 0, 0, .8);
   width: 4rem;
-  transition: width 1s cubic-bezier(.3,.86,.36,.95);
+  transition: width 1s cubic-bezier(.3, .86, .36, .95);
 }
 
 .is-hidden {
@@ -127,35 +142,48 @@ a {
   align-items: center;
   padding: 1rem;
 }
-.carousel__slide > p:first-child{
+
+.carousel__slide>p:first-child {
   text-transform: uppercase;
 }
-.carousel__slide .credentials  p{
+
+.carousel__slide .credentials p {
   margin-left: 7px;
 }
+
 .carousel__slide .credentials__text {
   text-align: left;
 }
 
 @media (min-width: 576px) {
   .carousel {
-      height: 350px;
-      width: 70%;
+    height: 350px;
+    width: 70%;
   }
-  .carousel__slide h2{
-      font-size: 1.8rem;
-      margin: 0 2rem;
+  .carousel__slide h2 {
+    font-size: 1.8rem;
+    margin: 0 2rem;
   }
 }
+
 @media (min-width: 1441px) {
   .carousel {
-      height: 350px;
-      width: 50%;
+    height: 350px;
+    width: 50%;
   }
 }
 
 @media (max-width: 576px) {
   .carousel__button {
-      display: none;
+    display: none;
+  }
+  
+}
+@media (min-width: 576px) {
+  :global(.App) {
+      min-width: 580px;
+  }
+  .DesktopOnly {
+    display: block;
   }
 }
