--- a/components/KontaktForm/KontaktForm.module.css
+++ b/components/KontaktForm/KontaktForm.module.css
@@ -24,6 +24,7 @@
     font-size: 1rem;
     margin: 0;
     margin-left: 0;
+    box-sizing: border-box;
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 10px;
@@ -44,6 +45,10 @@
   }
   .Button:not(:disabled) {
     animation: enable 0.3s linear;
+}
+
+.checkmarkDiv {
+    display: inline-block;
 }
 
 @keyframes enable {
