--- a/components/KontaktForm/loader.module.css
+++ b/components/KontaktForm/loader.module.css
@@ -1,24 +1,66 @@
 .label {
     position: relative;
+    top: 4px;
     height: 20px;
     width: 20px;
     display: inline-block;
     border: 2px solid rgba(255,255,255,0.2);
     border-radius: 50%;
     border-left-color: lightgreen;
+    animation: rotate 0.8s linear infinite;
 }
 
-.checkIcon{
-
+.labelConfirmed {
+    animation: none;
+    border-color: lightgreen;
+    transition: border-color 0.5s ease-out;
 }
+
+@keyframes rotate {
+    50%{
+        border-left-color: #9b59b6;
+    }
+    75%{
+        border-left-color: #e67e22;
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .checkIcon:after{
     position: absolute;
     content: "";
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scaleX(-1) rotate(135deg);
-    height: 5px;
+    left: 4px;
+    transform: scaleX(-1) rotate(135deg);
+    height: 6px;
     width: 3px;
     border-top: 2px solid lightgreen;
     border-right: 2px solid lightgreen;
+    transform-origin: left top;
+    animation: check-icon 0.8s ease;
+}
+
+@keyframes check-icon {
+    0%{
+        height: 0;
+        width: 0;
+        opacity: 1;
+    }
+    20%{
+        height: 0;
+        width: 3px;
+        opacity: 1;
+    }
+    40%{
+        height: 6px;
+        width:3px;
+        opacity: 1;
+    }
+    100%{
+        height: 6px;
+        width: 3px;
+        opacity: 1;
+    }
 }
