updated virksomheder and 404 page

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -9,6 +9,10 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 
 .Footer h3{
