--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+html{
+  min-height: 100vh;
+  position: relative;
+}
 html,
 body {
   padding: 0;
@@ -6,6 +10,10 @@ body {
   font-size: 16px;
   width: 100%;
   color: #161637;
+}
+
+main{
+  margin-bottom: 18rem;
 }
 
 .DesktopOnly {
