--- a/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
+++ b/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 0rem 1rem;
+    margin-bottom: 4rem;
 }
 .Header__h1, .Paragraph__p{
     margin-block-start: 0;
