--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .CardContainer{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap ;
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
@@ -38,9 +38,8 @@
     background-color: #f29722;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 1100px) {
     .CardContainer{
-        flex-direction: row;
         align-items: unset;
     }
     .Card{
