--- a/components/UI/Modal/Modal.module.css
+++ b/components/UI/Modal/Modal.module.css
@@ -23,7 +23,7 @@
     color: black;
     border-radius: 10px;
     padding-top: 1px;
-    background-color: lightgray;
+    background-color: #e7e7de;
     font-size: 1rem;
 }
 
