--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,7 @@ a {
 .carousel__slide h2 {
   font-size: 1rem;
   margin: 0 1rem;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 .carousel__button {
