--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -41,10 +41,11 @@
 @media (min-width: 1100px) {
     .CardContainer{
         align-items: unset;
+        justify-content: center;
     }
     .Card{
         margin: 0 2rem;
-        min-width: 20rem;
+        min-width: 18rem;
     }
     .Header{
         min-height: 19rem;
