--- a/components/TwoColumnDiv/TwoColumnDiv.module.css
+++ b/components/TwoColumnDiv/TwoColumnDiv.module.css
@@ -1,4 +1,4 @@
-.Container{
+.Container {
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -6,49 +6,78 @@
     align-items: center;
     padding: 3rem 1rem;
 }
-.Header__h2, .Paragraph__p{
+
+.Header__h2, .Paragraph__p {
     margin-block-start: 0;
     margin-block-end: 0;
 }
-.Header h2{
+
+.Header h2 {
     margin-top: 0;
     font-size: 3rem;
 }
 
-.TextDiv{
+.TextDiv {
     font-size: 1.2rem;
 }
-.TextDiv a{
+
+.TextDiv a {
     text-decoration: none;
     color: #6cb0e1;
 }
 
-.Header{
+.Header {
     margin-bottom: 2rem;
 }
 
-.Paragraph{
+.Paragraph {
     margin: 0;
     margin-top: 3rem;
 }
 
-.Paragraph__p{
+.Paragraph__p {
     font-size: 1.25rem;
 }
 
+@media(max-width: 576px){
+    .smallIconReverse{
+        flex-direction: column-reverse;
+    }
+}
+
 @media (min-width: 576px) {
-    .Container{
+    .Container {
         flex-direction: row;
     }
-    .TextDiv{
+    .ReverseContainer {
+        flex-direction: row-reverse;
+        margin-left: -5rem;
+    }
+    .ReverseContainer .TextDiv h2{
+        font-size: 2rem;
+    }
+    .ReverseContainer .TextDiv svg{
+        width: 1.5rem;
+        float: left;
+    }
+    .ReverseContainer .ImageDiv {
+        margin-right: 0rem;
+    }
+    .TextDiv {
         margin-right: 5rem;
         text-align: left;
     }
     .ImageDiv img {
         width: 590px;
     }
-    .Header h2{
+    .Header h2 {
         margin-top: 0;
-        font-size: 4rem;
+        font-size: 3.5rem;
+    }
+}
+
+@media(min-width: 780px){
+    .TextDiv {
+        max-width: 30%;
     }
 }
