--- a/components/TwoColumnKontaktDiv/TwoColumnKontaktDiv.module.css
+++ b/components/TwoColumnKontaktDiv/TwoColumnKontaktDiv.module.css
@@ -5,5 +5,5 @@
     display: flex;
     margin-top: 10rem;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 }
