--- a/components/ContentImages/ApplicationProcess/ApplicationProcess.module.css
+++ b/components/ContentImages/ApplicationProcess/ApplicationProcess.module.css
@@ -1,6 +1,7 @@
 .ApplicationContainer{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -13,7 +14,7 @@
     width: 90%;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 770px) {
     .ApplicationContainer{
         flex-direction: row;
     }
