--- a/styles/globals.css
+++ b/styles/globals.css
@@ -167,7 +167,7 @@ a {
 }
 @media (min-width: 750px) {
   main{
-    margin-bottom: 20rem;
+    margin-bottom: 15rem;
   }
   .carousel {
     height: 19rem;
@@ -184,7 +184,7 @@ a {
     margin-bottom: 15.5rem;
   }
   .carousel {
-    height: 400px;
+    height: 35vh;
     width: 70%;
   }
   .carousel__slide h2 {
@@ -193,7 +193,19 @@ a {
   }
 }
 
-@media (min-width: 1441px) {
+@media (min-width: 780px) {
+  .carousel {
+    height: 30rem;
+  }
+}
+
+@media (min-width: 1199px) {
+  .carousel {
+    height: 25rem;
+  }
+}
+
+@media (min-width: 1600px) {
   .carousel {
     height: 350px;
     width: 50%;
