--- a/components/Avatar/Avatar.module.css
+++ b/components/Avatar/Avatar.module.css
@@ -47,6 +47,7 @@
         position: absolute;
         animation: floatUp 6s ease-in-out infinite;
         z-index: 90;
+        max-width: 6.5rem;
     }
 
     .avatar:nth-of-type(2){
@@ -62,11 +63,11 @@
         left:49%;
     }
     .topRight {
-        top:2%;
-        left:80%;
+        top:3%;
+        left:79%;
     }
     .bottomRight {
-        top: 15%;
+        top: 12%;
         left:82%;
     }
     .vikarJob {
@@ -76,9 +77,9 @@
         color: white;
     }
     .avatar:nth-of-type(2) .vikarJob{
-        background-color: red;
+        background-color: #255c92;
     }
     .avatar:nth-of-type(3) .vikarJob{
-        background-color: orange;
+        background-color: #ffc4ab;
     }
 }
