--- a/components/ClientVideoDiv/ClientVideoDiv.module.css
+++ b/components/ClientVideoDiv/ClientVideoDiv.module.css
@@ -26,6 +26,14 @@
     font-size: 1.2rem;
 }
 
+.TextDiv h4 {
+    text-align: left;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+
 .Paragraph{
     margin: 3rem 0;
 }
@@ -40,18 +48,18 @@
     background-color: white;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 780px) {
     .Container{
         flex-direction: row;
     }
     .TextDiv{
-        margin-left: 3rem;
+        margin-left: 7rem;
     }
     .TextDiv p{
         text-align: left;
     }
     .VideoDiv iframe {
-        margin-top: 3rem;
+        margin-top: 1rem;
         width: 28rem;
         height: 18rem;
         border-radius: 10px;
