--- a/components/ContentImages/ContentImage.module.css
+++ b/components/ContentImages/ContentImage.module.css
@@ -3,15 +3,19 @@
     display: none;
 }
 
-.ImageDiv{
+.ImageDiv, .ImageDiv2{
     display: none;
 }
 
 @media (min-width: 780px) {
     .ImageDiv{
         display: block;
-        width: 70%;
-        height: 70%;
-        float: right;
+        width: 100%;
+        height: 100%;
+    }
+    .ImageDiv2{
+        display: block;
+        max-width: 100%;
+        max-height: 80%;
     }
 }
