--- a/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
+++ b/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
@@ -4,28 +4,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0rem 1rem;
-    margin-bottom: 4rem;
+    padding: 5rem 2rem;
+    box-sizing: border-box;
 }
 .Header__h1, .Paragraph__p{
     margin-block-start: 0;
     margin-block-end: 0;
 }
-.Header h2{
-    margin-top: 0;
-    font-size: 3rem;
+
+.Header__h1{
+    font-size: 2rem;
+}
+
+.lightBlueDiv{
+    background-color: #94B5C0;
 }
 
 .TextDiv{
     font-size: 1.2rem;
+    margin-bottom: 1rem;
 }
 .TextDiv a{
     text-decoration: none;
     color: #6cb0e1;
 }
 
-.ImageDiv img{
-        max-width: 80%;
+.ImageDiv{
+    /* display: none; */
+    max-width: 70%;
 }
 
 .Paragraph{
@@ -34,27 +40,34 @@
 }
 
 .Paragraph p{
-    font-size: 1rem;
+    font-size: 1.25rem;
 }
 
-@media (min-width: 576px) {
+
+@media (min-width: 780px) {
     .Container{
         flex-direction: row;
     }
     .ReverseContainer{
         flex-direction: row-reverse;
-        margin-left: -5rem;
+        margin-left: -3rem;
+    }
+    .ReverseContainer .TextDiv{
+        margin-left: 4rem;
     }
     .TextDiv{
         margin-right: 0rem;
         text-align: left;
-        max-width: 35%;
+        max-width: 30%;
     }
-    .ImageDiv img {
-        width: 590px;
-    }
-    .Header h2{
+    .Header{
         margin-top: 0;
-        font-size: 4rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .Container{
+        padding: 0 2rem;
     }
 }
