--- a/components/ContentImages/TeamPhotos/Team.module.css
+++ b/components/ContentImages/TeamPhotos/Team.module.css
@@ -6,3 +6,13 @@
     height: 100%;
     border-radius: 50%;
 }
+.CardPhotoErik{
+    width: 8rem;
+    height: 5rem;
+}
+
+.CardPhotoErik img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
