--- a/components/CarouselContainer/CarouselContainer.module.css
+++ b/components/CarouselContainer/CarouselContainer.module.css
@@ -1,5 +1,5 @@
 .Container{
-    background-color:#94B5C0; 
+    background-color:#AFC4DB; 
      display: block;
     /* display: flex;
     flex-direction: column;
