--- a/components/UI/Modal/Modal.module.css
+++ b/components/UI/Modal/Modal.module.css
@@ -28,7 +28,7 @@
 }
 
 .Header{
-    background-color: #1c73b6;
+    background-color: #2a5c91;
     color: white;
     border-radius: 40px 40px 0 0;
 }
@@ -50,7 +50,7 @@
     background-color: white; 
     color: #2a5c91; 
     min-width: 12rem;
-    border: 3px solid #1c73b6;
+    border: 3px solid #2a5c91;
     padding: 1rem;
     text-align: center;
     text-decoration: none;
@@ -75,5 +75,11 @@
     .ModalButton{
         min-width: 20rem;
         padding: 16px 5rem;
+    }
+}
+
+@media (min-width: 800px) {
+    .Modal{
+        overflow-y: unset;
     }
 }
