--- a/components/Avatar/Avatar.module.css
+++ b/components/Avatar/Avatar.module.css
@@ -41,6 +41,52 @@
 	}
 }
 
+/* @media (max-width: 780px) {
+    .avatar{
+        display: block;
+        position: absolute;
+        animation: floatUp 6s ease-in-out infinite;
+        z-index: 90;
+        max-width: 6.5rem;
+    }
+
+    .avatar:nth-of-type(2){
+        animation: floatDown 5s ease-in-out infinite;
+    }
+
+    .avatar:nth-of-type(2){
+        animation: floatUp2 5s ease-in-out infinite;
+    }
+
+    .topLeft{
+        top:16%;
+        left:70%;
+    }
+    .topRight {
+        top:16%;
+        left:10%;
+    }
+    .bottomRight {
+        top: 16%;
+        left:40%;
+    }
+    .bottomRightLow{
+        top:16%
+    }
+    .vikarJob {
+        background-color: #6cb0e1;
+        padding: 5px;
+        border-radius: 10rem;
+        color: white;
+    }
+    .avatar:nth-of-type(2) .vikarJob{
+        background-color: #ffc4ab;
+    }
+    .avatar:nth-of-type(3) .vikarJob{
+        background-color: #255c92;
+    }
+} */
+
 @media (min-width:1700px) {
     .avatar{
         display: block;
@@ -70,6 +116,9 @@
         top: 12%;
         left:82%;
     }
+    .bottomRightLow{
+        top:15%
+    }
     .vikarJob {
         background-color: #6cb0e1;
         padding: 5px;
@@ -77,9 +126,9 @@
         color: white;
     }
     .avatar:nth-of-type(2) .vikarJob{
-        background-color: #255c92;
+        background-color: #ffc4ab;
     }
     .avatar:nth-of-type(3) .vikarJob{
-        background-color: #ffc4ab;
+        background-color: #255c92;
     }
 }
