--- a/components/ContentImages/ApplicationProcess/ApplicationProcess.module.css
+++ b/components/ContentImages/ApplicationProcess/ApplicationProcess.module.css
@@ -14,14 +14,19 @@
     width: 90%;
 }
 
-@media (min-width: 770px) {
+@media (min-width: 811px) {
     .ApplicationContainer{
         flex-direction: row;
     }
     .ApplicationPhoto {
-        width: 15%;
+        width: 20%;
     }
     .ApplicationPhoto img{
         width: 80%;
+    }
+}
+@media (min-width: 1450px) {
+    .ApplicationPhoto {
+        width: 15%;
     }
 }
