--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -2,17 +2,15 @@
   display: flex;
   font-size: 1.1rem;
   padding: 2rem;
-  box-shadow: 0px -0.5px 0px #ebf0f7;
+  /* box-shadow: 0px -0.5px 0px #ebf0f7; */
   padding-top: 3rem;
-  background-color: rgb(221, 221, 221);
+  /* background-color: rgb(221, 221, 221); */
   color: black;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
   width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  border-top: 1px solid #AFC4DB;
 }
 
 .Footer h3 {
@@ -41,5 +39,15 @@
     margin-top: 0;
     flex-direction: row;
     text-align: left;
+  }
+  .Aligned{
+    max-width: 40%;
+  }
+}
+
+@media (min-width: 810px) {
+  .Aligned{
+    margin-left: -3rem;
+    max-width: 28%;
   }
 }
