--- a/components/KontaktForm/Input.module.css
+++ b/components/KontaktForm/Input.module.css
@@ -4,15 +4,21 @@
   box-sizing: border-box;
   text-align: left;
 }
-.Input input, .Input textarea{
-  background-color: #ebeef0;
+
+.Input input, .Input textarea {
+  background-color: #E7F1F7;
 }
+
+.Input input::placeholder, .Input textarea::placeholder {
+  font-size: 1rem;
+}
+
 
 .InputElement {
   outline: none;
   border: 1px solid #ccc;
-  border-radius: 2px;
-  background-color: white;
+  border-radius: 10px;
+  background-color: #E7F1F7;;
   font: inherit;
   padding: 6px 10px;
   display: block;
@@ -32,6 +38,7 @@
 .InputTextarea {
   resize: none;
 }
+
 .noHoney {
   opacity: 0;
   position: absolute;
