--- a/components/Logo/FirmaLogo/SchoolLogos.module.css
+++ b/components/Logo/FirmaLogo/SchoolLogos.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
 }
 
-.Logo {
+.Logo, .LogoScaled {
     margin: 5px 3rem;
     padding: 0px;
     max-height: 80%; 
@@ -16,6 +16,10 @@
 /* .Logo:hover{
     transform: scale(1.3);
 } */
+.LogoScaled img{
+    height: 60px;
+    width: 210px;
+}
 
 .Logo img {
     height: 60px;
