--- a/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -13,7 +13,7 @@
 .Footer{
     position:fixed;
     bottom:0%;
-    padding-bottom: 10px;
+    padding: 32px 0px;
     width:100%;
     background-color:#f6f6f6
 }
@@ -24,7 +24,7 @@
     }
 }
 
-@media (min-width: 780px) {
+@media (min-width: 811px) {
     .SideDrawer {
         display: none;
     }
