--- a/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
+++ b/components/TwoColumnRoundedDiv/TwoColumnRoundedDiv.module.css
@@ -17,7 +17,7 @@
 }
 
 .lightBlueDiv{
-    background-color: #94B5C0;
+    background-color: #AFC4DB;;
 }
 
 .TextDiv{
@@ -53,7 +53,7 @@
         margin-left: -3rem;
     }
     .ReverseContainer .TextDiv{
-        margin-left: 4rem;
+        margin-left: 5rem;
     }
     .TextDiv{
         margin-right: 0rem;
@@ -66,8 +66,8 @@
     }
 }
 
-@media (min-width: 1400px) {
+/* @media (min-width: 1400px) {
     .Container{
         padding: 0 2rem;
     }
-}
+} */
