--- a/pages/kontakt/Kontakt.module.css
+++ b/pages/kontakt/Kontakt.module.css
@@ -32,12 +32,16 @@
 
 @media (min-width: 760px) {
     .kontaktFormDiv {
+        font-size: 1.25rem;
         text-align: left;
     }
     .kontaktFormDiv .HeaderContainer {
         width: 580px;
-        padding: 20px;
+        padding: 0 20px;
         margin: 0 auto;
+    }
+    .kontaktData {
+        font-size: 1.25rem;
     }
 }
 
