--- a/public/cookiepolicy.css
+++ b/public/cookiepolicy.css
@@ -1,4 +1,4 @@
-body > div:nth-of-type(3) {
-    margin: 0 auto;
+body div.CookieDeclaration {
+    margin: 0 auto 30rem auto;
     max-width: 50%;
 }
