--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,9 +12,25 @@ body {
   color: #161637;
 }
 
-main{
-  margin-bottom: 32rem;
+.grid{
+  display: grid;
+  height: 100vh;
+  grid-template-areas: "toolbar   toolbar   toolbar"
+                       "main     main     main"
+                       "footer   footer   footer";
 }
+
+.Toolbar{
+  grid-area: toolbar;
+}
+
+main{
+  grid-area: main;
+}
+footer{
+  grid-area: footer;
+}
+
 
 .DesktopOnly {
   display: none;
@@ -30,6 +46,10 @@ p {
   margin-block-end: 0;
 }
 
+p{
+  line-height: 1.8rem;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -43,7 +63,7 @@ a {
   position: relative;
   margin: 0 auto;
   text-align: left;
-  height: 27rem;
+  height: 33rem;
   box-sizing: border-box;
   margin-bottom: 2rem;
 }
@@ -75,6 +95,7 @@ a {
 .carousel__slide h2 {
   font-size: 1rem;
   margin: 0 1rem;
+  line-height: 1.7rem;
   /* font-style: italic; */
 }
 
@@ -166,11 +187,11 @@ a {
   text-align: left;
 }
 @media (min-width: 750px) {
-  main{
-    margin-bottom: 15.5rem;
-  }
   .carousel {
-    height: 19rem;
+    height: 23rem;
+  }
+  .carousel__slide h2 {
+    line-height: unset;
   }
 }
 @media (min-width: 780px) {
@@ -180,9 +201,7 @@ a {
   .DesktopOnly {
     display: block;
   }
-  main{
-    margin-bottom: 15.5rem;
-  }
+  
   .carousel {
     height: 35vh;
     width: 70%;
@@ -190,6 +209,7 @@ a {
   .carousel__slide h2 {
     font-size: 1.8rem;
     margin: 0 2rem;
+    font-weight: normal;
   }
 }
 
@@ -210,6 +230,7 @@ a {
     height: 350px;
     width: 50%;
   }
+  
 }
 
 @media (max-width: 780px) {
