--- a/public/sideDrawer.css
+++ b/public/sideDrawer.css
@@ -16,14 +16,15 @@
     position:absolute;
     bottom:0;
     box-sizing: border-box;
-    padding-bottom: 10px;
+    padding: 20px 0;
+    height: 5rem;
     width:100%;
     background-color:#f6f6f6
 }
 
 .MobileLogo img{
     width: 130px;
-    height: 50px;
+    height: 60px;
 }
 
 @media (min-width: 750px) {
