--- a/public/styles.css
+++ b/public/styles.css
@@ -3,8 +3,7 @@ html {
   position: relative;
 }
 
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
   font-family: "Inter", Helvetica, Arial, sans-serif;
@@ -13,16 +12,16 @@ body {
   color: #161637;
 }
 
+/* * {
+  outline: 1px solid #f00 !important;
+} */
+
 :global(.App) {
   min-width: 100%;
 }
-.Container {
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #fff;
+
+.main {
+  height: 100vh;
 }
 
 .BoxShadow {
@@ -43,10 +42,6 @@ body {
 
 .Toolbar nav {
   height: 100%;
-}
-
-.Logo {
-  height: 80%;
 }
 
 .NavigationItems {
@@ -82,25 +77,24 @@ body {
   display: block;
 }
 
-.NavigationItem a:active,
-.NavigationItem a.active {
+.NavigationItem a:active, .NavigationItem a.active {
   color: #056ab2;
 }
 
 .Backdrop {
-    width: 100%;
-    height: 100%;
-    overflow-y: hidden;
-    position: fixed;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
 }
 
 .BackdropShow {
-    display: block;
+  display: block;
 }
 
 .Logo {
@@ -112,44 +106,40 @@ body {
 }
 
 .Logo img {
-  height: 50px;
+  height: 60px;
   width: 130px;
 }
 
 .Content {
   margin: 0 auto;
-  margin-top: 5rem;
-  margin-bottom: 35rem;
+  /* margin-top: 5rem; */
+  /* margin-bottom: 35rem; */
   width: 80%;
 }
 
 /* Icons */
+
 .Icon {
   display: inline-block;
   margin: 0px;
-  margin-right: 5px;
-}
-.Icon img {
-  width: 20px;
 }
 
 /* FOOTER */
+
 .Footer {
   display: flex;
   font-size: 1.1rem;
-  padding: 0rem;
   box-sizing: border-box;
-  box-shadow: 0px -0.5px 0px #ebf0f7;
+  padding: 2rem;
+  /* box-shadow: 0px -0.5px 0px #ebf0f7; */
   padding-top: 3rem;
-  background-color: rgb(221, 221, 221);
+  /* background-color: rgb(221, 221, 221); */
   color: black;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  width: 100vw;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  width: 100%;
+  border-top: 1px solid #AFC4DB;
 }
 
 .Footer h3 {
@@ -165,13 +155,17 @@ body {
   color: #161637;
   margin-bottom: 1rem;
 }
+
 .List li a {
   color: #161637;
   text-decoration: none;
 }
+
 .List li a:hover {
   color: #056ab2;
 }
+
+/* Drawer Toggle */
 
 .DrawerToggle {
   width: 40px;
@@ -224,6 +218,9 @@ body {
     flex-direction: row;
     text-align: left;
   }
+  .Aligned {
+    max-width: 40%;
+  }
   .NavigationItem {
     margin: 0 1rem;
     height: 100%;
@@ -231,14 +228,12 @@ body {
     align-items: center;
     border-bottom: none;
   }
-
   .NavigationItem a {
     color: #161637;
     display: inline-block;
     padding: 10px 10px 0px 10px;
     border-bottom: 4px solid transparent;
   }
-
   /* .NavigationItem a:hover{
         text-shadow:
         -0.5px -0.5px 0 #03658C,
@@ -258,9 +253,7 @@ body {
         -0.5px 0.5px 0 #03658C,
         0.5px 0.5px 0 #03658C;
     } */
-
-  .NavigationItem::after,
-  .NavigationItem.active::after {
+  .NavigationItem::after, .NavigationItem.active::after {
     content: "";
     display: block;
     width: 0;
@@ -268,7 +261,6 @@ body {
     background: #2a5c91;
     transition: width ease-in-out 0.3s;
   }
-
   .NavigationItem:hover::after {
     width: 100%;
   }
@@ -276,12 +268,20 @@ body {
     flex-flow: row;
   }
 }
+
+@media (min-width: 810px) {
+  .Aligned {
+    margin-left: -3rem;
+    max-width: 28%;
+  }
+}
+
 @media (min-width: 1200px) {
   .KontaktNav {
     margin-left: 9rem;
   }
   .Content {
-    margin-bottom: 18rem;
+    /* margin-bottom: 18rem; */
     width: 50%;
   }
 }
