--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -22,6 +22,9 @@
     /* box-shadow: 0 3px 6px black;  */
     /* cursor: pointer; */
 }
+.TeamCard {
+    margin: 0 10px;
+}
 
 .Header {
     padding: 0;
