--- a/components/ClientVideoDiv/ClientVideoDiv.module.css
+++ b/components/ClientVideoDiv/ClientVideoDiv.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 0 1rem;
     text-align: center;
-    padding: 5rem 0;
+    padding: 3rem 1rem;
 }
 
 .Header{
