--- a/components/OneColumnDiv/OneColumnDiv.module.css
+++ b/components/OneColumnDiv/OneColumnDiv.module.css
@@ -1,61 +1,70 @@
-.Container{
+.Container {
     background-color: #E7F1F7;
     display: block;
-    padding:6rem 1rem 4rem 1rem;
+    padding: 6rem 1rem 4rem 1rem;
     font-size: 0.8rem;
 }
 
-.Container h4{
+.Container h4 {
     font-size: 2rem;
     margin-top: 0;
     margin-bottom: 1rem;
 }
-.Container h3{
+
+.Container h3 {
     font-size: 15px;
     color: #255c92;
 }
 
-.White{
+.White {
     background: white;
 }
-.lightBlueDiv{
+
+.lightBlueDiv {
     background-color: #AFC4DB;
 }
 
-.Children{
+.darkBlueDiv {
+    background-color: #255c92;
+    color: white;
+}
+
+.Children {
     margin-top: 2rem;
     font-size: 1.25rem;
 }
 
-.Paragraph p{
+.Paragraph p {
     font-size: 1.25rem;
     margin-block-start: 0;
     margin-block-end: 0;
 }
 
-.Children p{
+.Children p {
     font-size: 1.25rem;
 }
 
-.Children a{
+.Children a {
     text-decoration: none;
     color: #4470a0;
     font-weight: bold;
 }
 
-h4.bigHeader{
+h4.bigHeader {
     font-size: 3rem;
     margin-bottom: 1rem;
 }
 
 @media (min-width: 1100px) {
-    .Container{
+    .Container {
         font-size: 5rem;
-        padding:4rem 1rem 5rem 1rem;
+        padding: 4rem 1rem 5rem 1rem;
     }
-    h4.bigHeader{
+
+    h4.bigHeader {
         font-size: 5rem;
     }
+
     .Paragraph p {
         width: 50%;
         margin: 0 auto;
