--- a/components/KontaktForm/KontaktForm.module.css
+++ b/components/KontaktForm/KontaktForm.module.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+.kontaktFormHeader {
+    padding: 0 1px!important;
+}
+
 .Button{
     background-color: #1c73b6; 
     color: white; 
